@@ -1,4 +1,13 @@
 2000-05-14  Mo DeJong  <mdejong@redhat.com>
+
+	* src/pkgIndex.tcl:
+	* src/tcljava/tcl/lang/BlendExtension.java:
+	Moved the exporting of commands in the java
+	namespace from pkgIndex.tcl to BlendExtension.java
+	so that it will work in both Jacl and Tcl Blend.
+
+2000-05-14  Mo DeJong  <mdejong@redhat.com>
+
 	* docs/TclJavaLib/Eval.htm:
 	* src/jacl/tcl/lang/BgErrorMgr.java:
 	* src/jacl/tcl/lang/Interp.java:
